# VAR

./: README.md  VAR.py  pyproject.toml  requirements.txt  setup.cfg
tests/: test_VAR.py
