[metadata]
name = VAR
description = Vector Auto Regression Model
author = Max van Walsem
licence = MIT
licence_file = LICENCE
platforms = unix, linux, osc, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    VAR
install_requires =
    pandas>=1.4.1
    numpy>=1.2
python_requires =
    >=3.6
package_dir =
    =src
zip_safe = no